Creacion de carpetas multer y cloudinary para le manejo de imagenes

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGOOSE_CONNECT= mongodb+srv://Facundo:l9rbJCJnTIVP2ooY@g4.frjmrit.mongodb.net/test
 SECRET_KEY= grupo4
+CLOUD_NAME= djtdw1mi9 
+CLOUD_API_KEY= 744779631677255 
+CLOUD_API_SECRET= gB4WqkhMiLXRWI9yNtKuMcv_WxM
